fix-ui: markdown-embedded img overflow

--- a/_sass/wtsa.scss
+++ b/_sass/wtsa.scss
@@ -493,3 +493,7 @@ a.active {
 	border-width: 1px;
 	border-style: solid;
 }
+
+.page-content img {
+	max-width: 100%;
+}
